fix(Chip): chips now wrap if content is too long

--- a/terminus-ui/chip/src/chip-collection.component.scss
+++ b/terminus-ui/chip/src/chip-collection.component.scss
@@ -18,5 +18,6 @@
   $negative-spacing: spacing(small, 2);
   align-items: center;
   display: flex;
+  flex-wrap: wrap;
   margin: $negative-spacing;
 }
